--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
-sqlalchemy==1.4.13
-testing.postgresql==1.3.0
-numpy==1.20.2
+# This file lists usefull dependencies for a local test setup.
+# The only missing dependencies are meda and meda_adpkd which always need to be installed explicitly,
+# e.g. with
+#   pip install -e source_adpkd/
+#   pip install -e source_meda/
+
+wheel==0.36.2
+setuptools_scm==6.0.1
