--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,9 @@
 #   pip install -e source_adpkd/
 #   pip install -e source_meda/
 
-wheel==0.36.2
-setuptools_scm==6.0.1
+wheel==0.37.1
+setuptools_scm==6.4.2
+SQLAlchemy~=1.4.31
+numpy==1.22.2
+PyYAML~=6.0
+setuptools==60.8.1
